--- a/nautilus_help.man
+++ b/nautilus_help.man
@@ -351,7 +351,7 @@ ChaSum									summed charge of all the elements considering abundances
 TEMP1D				tab(nptmax)			gas temperature in a 1D physical strucure TEMP1D(ipts) = TCOLD + (TWARM-TCOLD) * 0.5*(1.+tanh((abs(zspace(ipts))-2.*Hcold)/(Hcold/3.d0)))		
 DTEMP1D				tab(nptmax)			dust temperature in a 1D physical structure
 TAU1D				tab(nptmax)			visual extinction in a 1D physical structure
-DENS1D				tab(nptmax)			gas density in a 1D physical structure
+DEnb_species_for_gasD				tab(nptmax)			gas density in a 1D physical structure
 
 Omega2									vertical gravity (for a disk model) Omega2 = GRAV.MCENTER/(DISTR)^3
 Mcenter									Central mass (for a disk model)
@@ -368,7 +368,7 @@ Densmax									Maximum density of the profile 0.8 . (DISTR/100AU)^(-1.5) / (mea
 
 KFACTOR									RAVNH  
 HTAU									sqrt(boltz*temp1D(1)/(meanw*amu*Omega2))
-NHEST									2. * DENS1D(1) * HTAU * sqrt(2.d0)*exp(-(Hsize/HTAU/sqrt(2.d0))**2)/((Hsize/HTAU/sqrt(2.d0))+sqrt((Hsize/HTAU/sqrt(2.d0))**2+2.d0))
+NHEST									2. * DEnb_species_for_gasD(1) * HTAU * sqrt(2.d0)*exp(-(Hsize/HTAU/sqrt(2.d0))**2)/((Hsize/HTAU/sqrt(2.d0))+sqrt((Hsize/HTAU/sqrt(2.d0))**2+2.d0))
 TAUEST									TAUEST = NHEST * KFACTOR
 ld1d				tab(nptmax)
 UV100
@@ -665,7 +665,7 @@ call MESH
 Estimate DENSMAX using the inner gaussian (considered to be dominant in the sigma) and the observed sigma (0.8 g cm-2 at 100 AU with a 1.5 power law)
 Calcultate the gas temperature set the dust temperature as equal
 
-!compute the density DENS1D through hydrostatic equilibrium using 1st order Euler
+!compute the density DEnb_species_for_gasD through hydrostatic equilibrium using 1st order Euler
 
 ! Computation of an estimated TAUBC using and erf function
 ! If T is constant outside, rho has a gaussian tail
