--- a/nautilus_help.man
+++ b/nautilus_help.man
@@ -87,7 +87,7 @@ DXDTS
 --gas phase parameters / grain parameters--   
 initial_gas_density									initial gas density
 TEMP0									initial gas temperature
-DTEMP0									initial dust temperature
+initial_dust_temperature									initial dust temperature
 DTOGM									original dust-to-gas mass ratio
 RAVNH									Av/NH ratio = 5.34D-22 . (DTOGM/0.01)
 STICK0									sticking coeff for neutral species
